--- a/Graphics-Project-2.CSharp.csproj
+++ b/Graphics-Project-2.CSharp.csproj
@@ -92,7 +92,8 @@
     <Compile Include="Assets\Plugin\EZ Camera Shake\Scripts\Utilities\CameraUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Shaders\MeteorShader.shader" />
+    <None Include="Assets\Shaders\BumpShader.shader" />
+    <None Include="Assets\Shaders\ToonShader.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
